Fix bugs
top shadow bug (covers)
overflowing splash (text & buttons) bug
forgot to set opacity back to 1 on images bug

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -267,7 +267,7 @@ nav a:hover {
 ***************** HOME *******************
 *****************************************/
 .splash {
-	max-height: 369px;
+	max-height: auto;
 	background-color: #76cace;
 	margin-top: 58px;
 	box-shadow: 0 0 6px rgba(0, 0, 0, 0.35);
@@ -275,12 +275,10 @@ nav a:hover {
 
 .splashImg {
 	background: url('../img/splash2.jpg') no-repeat 280px center;
-	max-height: 369px;
 }
 
 .splashContent {
 	height: 369px;
-	max-height: 369px;
 }
 
 .splashContent .description {
@@ -303,7 +301,7 @@ nav a:hover {
 	font-weight: 700;
 	background: white;
 	color: #76cace;
-	padding: 7px 15px;
+	padding: 10px 17px;
 	box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
 	border-radius: 3px;
 	margin-right: 10px;
@@ -319,11 +317,19 @@ nav a:hover {
 	padding-bottom: 20px;
 }
 
+.recentContent p{
+	margin-bottom: 10px;
+}
+
 .recentData {
 	width: 100%;
-	height: 234px;
+	height: 254px;
 	overflow: hidden;
 	padding: 0 20px;
+}
+
+.storyThumbnail{
+	margin-top: 15px;
 }
 
 .storyThumbnail .overlay {
@@ -356,7 +362,6 @@ nav a:hover {
 	transition: all .2s ease-out;  /* Chrome 26, Firefox 16+, iOS 7+, IE 10+, Opera, Safari 6.1+  */
 	width: 150px;
 	height: 224px;
-	opacity: 0;
 }
 
 .storyThumbnail .overlay {
